--- a/public/index.html
+++ b/public/index.html
@@ -6,20 +6,36 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <meta name="description" content="É desenvolvedor full-stack web e mobile, cientista e pesquisador na área de ciência de dados em Sistemas de Recomendação.">
+  
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-M898C15QF9"></script>
+
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-M898C15QF9');
+  </script>
+
   <title>Paulo Souza - Desenvolvedor, Cientista e Pesquisador</title>
 </head>
 
 <body>
   <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous"
-    src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v12.0&appId=316956777019428&autoLogAppEvents=1"
-    nonce="dU5E76lS"></script>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
+
   <div id="root"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
