Add admin page and about layout

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-M898C15QF9"></script>
+  <script src="https://www.google.com/recaptcha/api.js?render=6LfYpbodAAAAAL2tw6lzhwgIueB15G8e3hx6N7RF"></script>
 
   <script>
     window.dataLayer = window.dataLayer || [];
