Translate all texts

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="É desenvolvedor full-stack web e mobile, cientista e pesquisador na área de ciência de dados em Sistemas de Recomendação.">
+  <meta name="description" content="He is a web and mobile full-stack developer, scientist, and researcher in the Recommender Systems area.">
   
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
 
