Solve dependency errors useState and useEffect

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     gtag('config', 'G-M898C15QF9');
   </script>
 
-  <title>Paulo Souza - Desenvolvedor, Cientista e Pesquisador</title>
+  <title>Paulo Souza - Developer, Scientist, and Researcher</title>
 </head>
 
 <body>
