--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,16 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="He is a web and mobile full-stack developer, scientist, and researcher in the Recommender Systems area.">
-  
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+  <meta name="description" content="I am a web and mobile full-stack developer, scientist, and researcher in the Recommender Systems area.">
+  <meta property="og:title" content="Paulo Roberto de Souza">
+  <meta property="og:description" content="I am a web and mobile full-stack developer, scientist, and researcher in the Recommender Systems area.">
+  <meta property="og:image" content="https://personal-portfolio-files.s3.amazonaws.com/img/photo-introduction.jpeg">
 
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-M898C15QF9"></script>
   <script src="https://www.google.com/recaptcha/api.js?render=6LfYpbodAAAAAL2tw6lzhwgIueB15G8e3hx6N7RF"></script>
 
